--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -1,159 +1,10 @@
-alembic==1.14.1
-androguard==4.0.1
-apache-libcloud==3.8.0
-apkinspector==1.3.2
-appdirs==1.4.3
-apturl==0.5.2
-argcomplete==3.6.1
-args==0.1.0
-asn1crypto==1.5.1
-asttokens==3.0.0
-backcall==0.2.0
-banal==1.0.6
-bcrypt==3.1.7
-beautifulsoup4==4.13.4
-blinker==1.8.2
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-charset-normalizer==3.4.1
-click==8.1.8
-clint==0.5.1
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dataset==1.6.2
-dbus-python==1.2.16
-decorator==5.2.1
-defer==1.0.6
-defusedxml==0.7.1
-dell-recovery==0.0.0
-distlib==0.3.0
-distro==1.4.0
-distro-info==0.23+ubuntu1.1
-dnspython==2.6.1
-dominate==2.9.1
-duplicity==0.8.12.0
-email-validator==2.2.0
-entrypoints==0.3
-executing==2.2.0
-fasteners==0.14.1
-fdroidserver==2.4a2
-filelock==3.0.12
 flask==3.0.3
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.6.3
-Flask-Migrate==4.1.0
 flask-sqlalchemy==3.1.1
+flask-migrate==4.1.0
+flask-login==0.6.3
 flask-wtf==1.2.1
-frida==16.7.0
-future==0.18.2
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-Guake==3.6.3
-gunicorn==21.2.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==8.5.0
-importlib-resources==6.4.5
-ipython==8.12.3
-itsdangerous==2.2.0
-jedi==0.19.2
-jinja2==3.1.6
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-loguru==0.7.3
-louis==3.12.0
-lxml==5.3.1
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-monotonic==1.5
-more-itertools==4.2.0
-mutf8==1.0.6
-netifaces==0.10.4
-numpy==1.24.4
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.11.0.86
-oscrypto==1.3.0
-packaging==20.3
-paramiko==2.6.0
-parso==0.8.4
-pathspec==0.12.1
-pbr==5.4.5
-pexpect==4.6.0
-pickleshare==0.7.5
-pillow==10.2.0
-platformdirs==4.3.6
-progressbar==2.5
-prompt-toolkit==3.0.50
-protobuf==3.6.1
-pure-eval==0.2.3
-puremagic==1.28
-pycairo==1.16.2
-pycups==1.9.73
-pydot==3.0.4
-pygments==2.19.1
-PyGObject==3.36.0
-PyJWT==2.9.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==3.1.4
-pypng==0.20220715.0
-pyRFC3339==1.1
-python-apt==2.0.1+ubuntu0.20.4.1
-python-dateutil==2.7.3
-python-debian==0.1.36+ubuntu1.1
+email-validator==2.2.0
 python-dotenv==1.0.1
-python-magic==0.4.27
-python-vagrant==1.0.0
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-pyzbar==0.1.9
-qrcode==7.4.2
-reportlab==3.5.34
-requests==2.32.3
-requests-unixsocket==0.2.0
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.8
-s3cmd==2.0.2
-sdkmanager==0.6.11
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-smmap==5.0.2
-sos==4.8.2
-soupsieve==2.7
 sqlalchemy==2.0.40
-stack-data==0.6.3
-systemd-python==234
-tomli==2.2.1
-traitlets==5.14.3
-twilio==7.15.0
-typing-extensions==4.12.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-validate-docbr==1.10.0
-vboxapi==1.0
-virtualenv==20.0.17
-visitor==0.1.3
-wadllib==1.3.3
-wcwidth==0.2.13
-werkzeug==3.0.6
 wtforms==3.1.2
-xkit==0.0.0
-yamllint==1.35.1
-zipp==3.20.2
+gunicorn==21.2.0
